# rokit-locator-qr-addon

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  readme.md
config/: account.yaml  config.yaml
include/: BinaryInterfacePoseStruct.h  BinaryInterfaceRecordingVisualizationStruct.h  binary_interface_client.h  database_controller.h  main_logic.h  rpc_client.h  thread_pool.h  user_command_processing.h
src/: database_controller.cpp  main_logic.cpp  rpc_client.cpp  thread_pool.cpp  user_command_processing.cpp
